package mindera.mindswap.porto.module1.intro.bearshop;

public class BearTypes {

    public static final String SIMPLE_BEAR = "Simple Bear";
    public static final String CRANKY_BEAR = "Cranky Bear";
    public static final String DRUNK_BEAR = "Drunk Bear";
}