@startuml

title __BEARSHOP's Class Diagram__\n

  namespace mindera.mindswap.aveiro.module1.intro.bearshop {
    abstract class bearshop.mindera.mindswap.porto.module1.intro.Bear {
        - energy : int
        - talkingMode : boolean
        - type : String
        + Bear()
        + canTalk()
        {abstract} + die()
        + getEnergy()
        + loseEnergy()
        + recharge()
        + stupidMethod()
        + talk()
        + toString()
        + turnOffTalkingMode()
        + turnOnTalkingMode()
        - checkEnergyLevel()
    }
  }
  

  namespace mindera.mindswap.aveiro.module1.intro.bearshop {
    class bearshop.mindera.mindswap.porto.module1.intro.BearTypes {
        {static} + CRANKY_BEAR : String
        {static} + DRUNK_BEAR : String
        {static} + SIMPLE_BEAR : String
    }
  }
  

  namespace mindera.mindswap.aveiro.module1.intro.bearshop {
    class bearshop.mindera.mindswap.porto.module1.intro.CrankyBear {
        - singingAbility : boolean
        + CrankyBear()
        + die()
        + sing()
        + talk()
    }
  }
  

  namespace mindera.mindswap.aveiro.module1.intro.bearshop {
    class bearshop.mindera.mindswap.porto.module1.intro.DrunkBear {
        - FALL_ASLEEP_PROBABILITY : double
        - asleep : boolean
        + DrunkBear()
        + die()
        + recharge()
        + talk()
        - snore()
    }
  }
  

  namespace mindera.mindswap.aveiro.module1.intro.bearshop {
    class bearshop.mindera.mindswap.porto.module1.intro.Main {
        {static} + main()
    }
  }
  

  namespace mindera.mindswap.aveiro.module1.intro.bearshop {
    class bearshop.mindera.mindswap.porto.module1.intro.Main2 {
        {static} + main()
    }
  }
  

  namespace mindera.mindswap.aveiro.module1.intro.bearshop {
    class bearshop.mindera.mindswap.porto.module1.intro.Shop {
        - bearsCreated : int
        + compare()
        + createBear()
    }
  }
  

  namespace mindera.mindswap.aveiro.module1.intro.bearshop {
    class bearshop.mindera.mindswap.porto.module1.intro.SimpleBear {
        + SimpleBear()
        + die()
    }
  }
  

  bearshop.mindera.mindswap.porto.module1.intro.CrankyBear -up-|> bearshop.mindera.mindswap.porto.module1.intro.Bear
  bearshop.mindera.mindswap.porto.module1.intro.DrunkBear -up-|> bearshop.mindera.mindswap.porto.module1.intro.Bear
  bearshop.mindera.mindswap.porto.module1.intro.SimpleBear -up-|> bearshop.mindera.mindswap.porto.module1.intro.Bear


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
